Further improvements of validation

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,1 +1,4 @@
-org.hibernate.validator.constraints.NotBlank.message = wprowadz dane
+org.hibernate.validator.constraints.NotBlank.message = wprowadü dane
+javax.validation.constraints.Size.message = Tekst nieopowiedniej dlugosci
+javax.validation.constraints.Min.message = Za krotki
+org.hibernate.validator.constraints.pl.PESEL.message = Wprowadü poprawnyPESEL
