Further improvements of validation

--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,4 +1,4 @@
-org.hibernate.validator.constraints.NotBlank.message = wprowadü dane
+org.hibernate.validator.constraints.NotBlank.message = Pole nie mo\u017ce by\u0107 puste
 javax.validation.constraints.Size.message = Tekst nieopowiedniej dlugosci
-javax.validation.constraints.Min.message = Za krotki
-org.hibernate.validator.constraints.pl.PESEL.message = Wprowadü poprawnyPESEL
+org.hibernate.validator.constraints.Email.message = Wprowad\u017a poprawny adres email
+javax.validation.constraints.NotNull.message = Wprowad\u017a poprawn\u0105 warto\u015b\u0107
